[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/Fonts_v2/PT_Sans/PTSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=2]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PTSans-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/NonDecorButtons.tres" type="Theme" id=4]
[ext_resource path="res://assets/images/iconsitems/Wood.png" type="Texture" id=5]
[ext_resource path="res://gui_modules/Mansion/Scripts/MansionUpgradesModule.gd" type="Script" id=6]
[ext_resource path="res://dragarraytemplate.gd" type="Script" id=7]
[ext_resource path="res://gui_modules/ScrollContainer.gd" type="Script" id=8]
[ext_resource path="res://assets/Textures_v2/MANSION/Job/button_gather.png" type="Texture" id=9]
[ext_resource path="res://assets/Themes_v2/MANSION/M_Upgrades_BG.tres" type="StyleBox" id=10]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/SimplePanel.tres" type="StyleBox" id=11]
[ext_resource path="res://assets/Themes_v2/MANSION/M_Upgrades_panel.tres" type="StyleBox" id=12]
[ext_resource path="res://assets/Textures_v2/MANSION/Upgrades/Buttons/button_upgrades_pressed2.png" type="Texture" id=13]
[ext_resource path="res://assets/Textures_v2/MANSION/Upgrades/Buttons/button_upgrades_hover.png" type="Texture" id=14]
[ext_resource path="res://assets/Textures_v2/MANSION/Upgrades/Buttons/button_upgrades_hover2.png" type="Texture" id=15]
[ext_resource path="res://assets/Textures_v2/MANSION/Upgrades/Buttons/button_upgrades_pressed.png" type="Texture" id=16]
[ext_resource path="res://assets/Textures_v2/MANSION/icon_upgrade_64.png" type="Texture" id=17]
[ext_resource path="res://assets/Textures_v2/MANSION/Upgrades/Buttons/button_upgrades.png" type="Texture" id=18]

[sub_resource type="StyleBoxTexture" id=1]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=5]

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 20
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 30
font_data = ExtResource( 1 )

[node name="MansionUpgradesModule" type="Panel"]
rect_min_size = Vector2( 1100, 385 )
custom_styles/panel = ExtResource( 12 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradesBG" type="Panel" parent="."]
show_behind_parent = true
margin_right = 1100.0
margin_bottom = 385.0
custom_styles/panel = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QueueList" type="Panel" parent="."]
margin_left = 755.44
margin_right = 1074.44
margin_bottom = 385.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar" type="VScrollBar" parent="QueueList"]
margin_left = 15.3016
margin_top = 90.0
margin_right = 27.3016
margin_bottom = 302.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="QueueList"]
margin_left = 45.0
margin_top = 90.0
margin_right = 305.0
margin_bottom = 314.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="QueueList/ScrollContainer"]

[node name="Button" type="TextureButton" parent="QueueList/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 260.0
margin_bottom = 46.0
rect_min_size = Vector2( 260, 46 )
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 15 )
expand = true
script = ExtResource( 7 )

[node name="name" type="Label" parent="QueueList/ScrollContainer/VBoxContainer/Button"]
margin_left = 12.0
margin_top = 5.0
margin_right = 245.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Name"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="progress" type="ProgressBar" parent="QueueList/ScrollContainer/VBoxContainer/Button"]
visible = false
margin_left = 400.0
margin_top = 13.0
margin_right = 532.0
margin_bottom = 37.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeList" type="Panel" parent="."]
margin_right = 388.0
margin_bottom = 385.0
custom_styles/panel = SubResource( 3 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar" type="VScrollBar" parent="UpgradeList"]
margin_left = 18.0
margin_top = 90.0
margin_right = 30.0
margin_bottom = 360.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="UpgradeList"]
margin_left = 45.0
margin_top = 90.0
margin_right = 364.0
margin_bottom = 360.0
rect_min_size = Vector2( 319, 0 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeList/ScrollContainer"]
margin_right = 319.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="Button" type="TextureButton" parent="UpgradeList/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 319.0
margin_bottom = 46.0
rect_min_size = Vector2( 0, 46 )
toggle_mode = true
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 14 )

[node name="name" type="Label" parent="UpgradeList/ScrollContainer/VBoxContainer/Button"]
margin_left = 14.0
margin_top = 5.0
margin_right = 312.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Name"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="progress" type="ProgressBar" parent="UpgradeList/ScrollContainer/VBoxContainer/Button"]
visible = false
margin_left = 400.0
margin_top = 13.0
margin_right = 532.0
margin_bottom = 37.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeDescript" type="Panel" parent="."]
margin_left = 371.0
margin_right = 732.0
margin_bottom = 385.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UpgradeDescript"]
margin_left = 19.0
margin_top = 72.0
margin_right = 346.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "Name"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="UpgradeDescript"]
margin_left = 19.0
margin_top = 118.0
margin_right = 346.0
margin_bottom = 238.0
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0.878431, 0.878431, 0.878431, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UpgradeDescript"]
margin_left = 19.0
margin_top = 252.0
margin_right = 346.0
margin_bottom = 322.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureRect" parent="UpgradeDescript/HBoxContainer"]
visible = false
margin_right = 70.0
margin_bottom = 70.0
texture = ExtResource( 9 )
stretch_mode = 6

[node name="icon" type="TextureRect" parent="UpgradeDescript/HBoxContainer/Button"]
margin_left = 2.0
margin_top = 2.0
margin_right = 68.0
margin_bottom = 68.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UpgradeDescript/HBoxContainer/Button"]
margin_left = 2.0
margin_top = 40.6
margin_right = 68.0
margin_bottom = 67.6
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "5/10"
align = 1
valign = 1

[node name="Time" type="TextureRect" parent="UpgradeDescript"]
margin_left = 292.0
margin_top = 332.0
margin_right = 324.0
margin_bottom = 364.0
hint_tooltip = "Build progress required"
texture = ExtResource( 17 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UpgradeDescript/Time"]
show_behind_parent = true
margin_left = -3.23785
margin_top = -5.0
margin_right = 70.7621
margin_bottom = 37.0
hint_tooltip = "TOOLTIPPROGRESSREQUIRED"
custom_styles/panel = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UpgradeDescript/Time"]
margin_left = 28.0
margin_top = 2.0
margin_right = 64.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "15"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnlockButton" type="Button" parent="UpgradeDescript"]
visible = false
margin_left = 11.0
margin_top = 327.0
margin_right = 287.0
margin_bottom = 369.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.517647, 1 )
text = "Add to Queue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActiveUpgrade" type="Panel" parent="."]
visible = false
margin_left = 1307.0
margin_top = 4.36038
margin_right = 1820.0
margin_bottom = 225.36

[node name="Label" type="Label" parent="ActiveUpgrade"]
margin_left = 49.0
margin_top = 15.0
margin_right = 478.0
margin_bottom = 74.0
text = "Active Upgrade"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="ActiveUpgrade"]
margin_left = 32.5515
margin_top = 162.334
margin_right = 488.552
margin_bottom = 186.334

[node name="SelectChars" type="Button" parent="."]
visible = false
margin_left = 812.44
margin_top = 327.0
margin_right = 1022.44
margin_bottom = 369.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.517647, 1 )
text = "Select Characters"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="Button" parent="."]
visible = false
margin_left = 916.44
margin_top = 327.0
margin_right = 1022.44
margin_bottom = 369.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.517647, 1 )
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="."]
visible = false
margin_left = 812.44
margin_top = 327.0
margin_right = 901.44
margin_bottom = 369.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.517647, 1 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 371.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "List of Upgrades"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 364.0
margin_right = 735.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "Upgrade Info"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 732.0
margin_right = 1103.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "Current Upgrade Order"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
